Upgrade packages, fix infinite streaming

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 .msg-interim {
-  background-color: lightsalmon;
+  background-color: rgb(37, 22, 16);
   margin-right: 0.1em;
 }
 
